# Propchain

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/ai/: Dockerfile  list_models.py  requirements.txt
backend/ai/src/: main.py
backend/analytics/: Dockerfile  requirements.txt
backend/analytics/src/: main.py
backend/api/: package-lock.json  package.json  tsconfig.json
backend/api/src/: index.ts  migrate.ts  seed.ts  seed_neon.ts
backend/indexer/: Cargo.toml  Dockerfile
backend/indexer/src/: indexer.rs  main.rs
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/scripts/: addProperty.ts  deploy.ts  setup.ts
contracts/src/bridge/: L2Bridge.sol
contracts/src/interfaces/: IPropertyToken.sol
contracts/src/lending/: PropchainLending.sol
contracts/src/tokens/: PropertyToken.sol
contracts/src/vault/: PropchainVault.sol
contracts/test/: PropertyToken.test.ts
database/: seed.ts
database/migrations/: 001_init.sql
database/seeds/: 001_sample_properties.sql
mobile/: app.json  package-lock.json  package.json
mobile/__tests__/: propertiesSlice.test.ts
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  portfolio.tsx  properties.tsx
mobile/app/property/: [id].tsx
mobile/src/services/: api.ts  firebase.ts
mobile/src/store/: index.ts
mobile/src/utils/: i18n.ts
web/: .env.production  Dockerfile  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json
web/src/__tests__/: MarketStats.test.tsx  authSlice.test.ts  yieldCalc.test.ts
(+56 files in other folders)
